test/positive/feature_abstract.java

public abstract class feature_abstract {
  public abstract int m();
}

