test/negative/IGNOREfeature_localvariableinowninitializer.java

public class feature_localvariableinowninitializer {
  public feature_localvariableinowninitializer() {}
  public void m() {
    int x  = (x = 1) + x;
  }
}

